--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=localhost;Database=pubs;User Id=pub_ad;Password=1213;Trust Server Certificate=true;Trusted_Connection=True;"
+  }
 }
 //dotnet ef dbcontext scaffold "Server=localhost;Database=pubs;User Id=pub_ad;Password=1213;Trust Server Certificate=true;" Microsoft.EntityFrameworkCore.SqlServer --context-dir Context -o Data
