--- a/yungching_quiz.csproj
+++ b/yungching_quiz.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
