--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnectionString": "Server=localhost;Database=pubs;User Id=pub_ad;Password=1213;Trust Server Certificate=true;Trusted_Connection=True;"
-  }
+  "AllowedHosts": "*"
 }
-//dotnet ef dbcontext scaffold "Server=localhost;Database=pubs;User Id=pub_ad;Password=1213;Trust Server Certificate=true;" Microsoft.EntityFrameworkCore.SqlServer --context-dir Context -o Data
+//dotnet user-secrets set ConnectionStrings:Pubs"Server=localhost;Database=pubs;User Id=pub_ad;Password=1213;Trust Server Certificate=true;" Microsoft.EntityFrameworkCore.SqlServer --context-dir Context -o Data
+//dotnet ef dbcontext scaffold Name=ConnectionStrings:Pubs Microsoft.EntityFrameworkCore.SqlServer --context-dir Context -o Data
